# cpp-flex-logger

./: .clang-format  CMakeLists.txt  CONTRIBUTION.md  README.md  logger.h  main.cpp
